Bug 39604 - [regression bisected] ES2 conformance test copy_texture fails
Summary: [regression bisected] ES2 conformance test copy_texture fails
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-27 12:49 UTC by Ian Romanick
Modified: 2011-07-28 16:39 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Ian Romanick 2011-07-27 12:49:15 UTC
On both swrast and i965 the ES2 conformance test copy_texture fails as shown below.  The test previously passed on master and passes on 7.11.  I bisected the failure to:

commit 5874890c26f434f54e9218b83fae4eb8175c24e9
Author: Brian Paul <brianp@vmware.com>
Date:   Tue Jul 19 20:03:05 2011 -0600

    mesa: stop using ctx->Driver.CopyTexImage1D/2D() hooks


[idr@mumford piglit]$ bin/GTF -noimagefileio -id=45 -run=/home/idr/devel/graphics/GTF_ES/GTF_ES/glsl/GTF/GL2FixedTests/copy_texture/copy_texture.test
Running GTF (Graphics Test Framework)
egl_vendor: Mesa Project
egl_version: 1.4
ConfigID: 45 RGBA bits( 8, 8, 8, 0) Depth bits: 24 Stencil bits: 8
Mesa warning: couldn't open libtxc_dxtn.so, software DXTn compression/decompression unavailable
Mesa: Initializing x86-64 optimizations
gtf_version: 2.9
mode: egl
arg: bin/GTF -noimagefileio -id=45 -run=/home/idr/devel/graphics/GTF_ES/GTF_ES/glsl/GTF/GL2FixedTests/copy_texture/copy_texture.test
gl_renderer: Software Rasterizer
gl_shading_language_version: OpenGL ES GLSL ES 1.0.16
gl_version: OpenGL ES 2.0 Mesa 7.12-devel
gl_vendor: Mesa Project
gl_extensions: GL_EXT_blend_minmax GL_EXT_multi_draw_arrays GL_EXT_texture_filter_anisotropic GL_OES_depth24 GL_OES_element_index_uint GL_OES_fbo_render_mipmap GL_OES_mapbuffer GL_OES_rgb8_rgba8 GL_OES_standard_derivatives GL_OES_stencil8 GL_OES_texture_3D GL_OES_texture_npot GL_OES_depth_texture GL_OES_packed_depth_stencil GL_EXT_texture_type_2_10_10_10_REV 
stamp: 20110727123343
Zero epsilon: 0.000122, RGBA epsilon: ( 0.004044, 0.004044, 0.004044, 0.000122)
copy_texture: Start
#+ Color Buffer Format is GL_RGB. Texture Format is GL_LUMINANCE. Color drawn is (0.626, 0.25, 0.704, 0.716). Color read is (1, 1, 1, 1). Expected color is (0.626, 0.626, 0.626, 1). Epsilon is (0.0668, 0.0668, 0.0668, 0.000122).
copy_texture: total = 1, failure = 1, #1

Regression FAILED 1 of 1 tests.
Comment 1 Brian Paul 2011-07-28 08:54:46 UTC
I just posted a patch for review that should fix this.  It fixed my new piglit test case (copyteximage).  Can you test with GLES, Ian?
Comment 2 Brian Paul 2011-07-28 16:39:17 UTC
Patch committed.  e4fdc95277bd323d8945e20635d3a1702a2e695d


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.